--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
+annotated-types==0.7.0
+anyio==4.9.0
 certifi==2025.6.15
 charset-normalizer==3.4.2
 gitdb==4.0.12
 GitPython==3.1.44
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+ollama==0.5.1
+pydantic==2.11.7
+pydantic_core==2.33.2
 python-dotenv==1.1.0
 requests==2.32.4
 smmap==5.0.2
+sniffio==1.3.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
 urllib3==2.4.0
